--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -14573,13 +14573,25 @@ a.focus .summary_header {
    History (The Bureau)
    ========================================================================== */
 
-.history-expandable.expandable__expanded {
+.history-expandable {
   padding-top: 30px;
 }
 
+.history-expandable > .expandable_header {
+  margin-top: -30px;
+  background: #f1f2f2;
+}
+
+.expandable__expanded > .expandable_header {
+  margin-top: 0;
+}
+
+.history-expandable .expandable_content {
+  margin-bottom: 0;
+}
+
 .history-expandable > .expandable_content {
-  margin-right: 30px;
-  margin-left: 30px;
+  margin: 0 30px 30px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#101820), to(transparent));
   background-image: -webkit-linear-gradient(top, #101820 1px, transparent 1px);
   background-image: linear-gradient(to bottom, #101820 1px, transparent 1px);
@@ -14638,13 +14650,65 @@ a.focus .summary_header {
   padding: 0;
 }
 
+.history_item .expandable_link {
+  position: absolute;
+  right: 0.71428571em;
+}
+
+.history_item__right {
+  clear: right;
+}
+
+.history_item__right:before {
+  top: 19px;
+  left: -47px;
+}
+
+.history_item__right:after {
+  border-width: 15px 15px 15px 0;
+  border-color: transparent #ffffff transparent transparent;
+  top: 15px;
+  left: -15px;
+}
+
+.history_item__left {
+  clear: left;
+}
+
+.history_item__left:before {
+  top: 19px;
+  right: -47px;
+  left: initial;
+}
+
+.history_item__left:after {
+  border-width: 15px 0 15px 15px;
+  border-color: transparent transparent transparent #ffffff;
+  top: 15px;
+  right: -15px;
+  left: initial;
+}
+
 .expandable.history_item {
+  position: relative;
   background: white;
 }
 
 .expandable.history_item {
   margin-left: 49px;
-  position: relative;
+  clear: right;
+}
+
+.expandable.history_item:before {
+  top: 19px;
+  left: -47px;
+}
+
+.expandable.history_item:after {
+  border-width: 15px 15px 15px 0;
+  border-color: transparent #ffffff transparent transparent;
+  top: 15px;
+  left: -15px;
 }
 
 .expandable.history_item:before {
@@ -14655,8 +14719,6 @@ a.focus .summary_header {
   border: 5px solid #101820;
   border-radius: 100%;
   position: absolute;
-  top: 19px;
-  left: -47px;
   background: #2cb34a;
 }
 
@@ -14666,11 +14728,7 @@ a.focus .summary_header {
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 15px 15px 15px 0;
-  border-color: transparent #ffffff transparent transparent;
   position: absolute;
-  top: 15px;
-  left: -15px;
 }
 
 .history_item_date {
