Main menu tweaks to decouple the nav stuff fromt hte header.

--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -48,10 +48,10 @@
 
 <div class="sliding-nav_page">
 
-    <header class="header wrapper" role="banner">
+    <header class="header wrapper primary-nav_header-space" role="banner">
 
         <button class="sliding-nav_trigger" id="trigger" href="#">
-            <i class="cf-icon cf-icon-menu"></i>
+            <span class="cf-icon cf-icon-menu"></span>
             <span class="u-visually-hidden">Menu</span>
         </button>
 
