--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -203,6 +203,11 @@
       </div>
       <div class="docs-css">
         <pre class="docs-code"><code data-language="css">
+[role=&quot;banner&quot;] {
+  max-width: 1140px;
+  padding: 0 30px;
+}
+
 .header_logo {
   margin: 30px 0 1.25em 0;
   vertical-align: middle;
@@ -427,15 +432,15 @@
 }
 
 .primary-nav {
-  position: relative;
-  top: 116px;
+  position: absolute;
+  top: 154px;
+  right: 0;
+  left: 0;
+  z-index: 100;
 }
 
-[role=&quot;banner&quot;] {
-  max-width: 1140px;
-  padding: 0 30px;
-  position: relative;
-  top: -54px;
+.primary-nav_header-space {
+  padding-bottom: 54px;
 }
 
 .primary-nav .primary-nav_top-level-list {
