--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7546,6 +7546,11 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     - cfgov-layout
 */
 
+[role="banner"] {
+  max-width: 1140px;
+  padding: 0 30px;
+}
+
 .header_logo {
   margin: 30px 0 1.25em 0;
   vertical-align: middle;
@@ -7767,15 +7772,15 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 
 .primary-nav {
-  position: relative;
-  top: 116px;
+  position: absolute;
+  top: 154px;
+  right: 0;
+  left: 0;
+  z-index: 100;
 }
 
-[role="banner"] {
-  max-width: 1140px;
-  padding: 0 30px;
-  position: relative;
-  top: -54px;
+.primary-nav_header-space {
+  padding-bottom: 54px;
 }
 
 .primary-nav .primary-nav_top-level-list {
