--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
+
+<!--
+    ============================================================================
+
+    Hey! If you're viewing this, you should probably come work on our Technology
+    & Innovation team. We're always looking for a few great designers,
+    developers, data scientists, and network, infrastructure, privacy and
+    security pros. Keep an eye on our job opportunities at:
+    http://www.consumerfinance.gov/jobs/
+     
+    Also, you can see more of our code at https://github.com/cfpb
+     
+    And by the way, there’s another hidden message somewhere on the following
+    page: http://www.consumerfinance.gov/jobs/technology-innovation-fellows/.
+    See if you can find it! Hint: picture yourself embedded in our work.
+
+    ============================================================================
+-->
+
 <!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
