Fixes my nav tweaks to work with or without banner.

--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -427,13 +427,17 @@
 /* Horizontal mega menu for landscape tablets and larger
    ========================================================================== */
 
+.sliding-nav {
+  position: relative;
+}
+
 .sliding-nav_trigger {
   display: none;
 }
 
 .primary-nav {
   position: absolute;
-  top: 154px;
+  top: 116px;
   right: 0;
   left: 0;
   z-index: 100;
