--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -392,13 +392,17 @@
 
 .respond-to-min(801px, {
 
+    .sliding-nav {
+        position: relative;
+    }
+
     .sliding-nav_trigger {
         display: none;
     }
 
     .primary-nav {
         position: absolute;
-        top: 154px; // magic number - dependent on height of logo and its vertical padding
+        top: 116px; // magic number - dependent on height of logo and its vertical padding
         right: 0;
         left: 0;
         z-index: 100;
