--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -561,12 +561,15 @@
 /* Horizontal mega menu for landscape tablets and larger
    ========================================================================== */
 @media only all and (min-width: 50.0625em) {
+  .sliding-nav {
+    position: relative;
+  }
   .sliding-nav_trigger {
     display: none;
   }
   .primary-nav {
     position: absolute;
-    top: 154px;
+    top: 116px;
     right: 0;
     left: 0;
     z-index: 100;
