--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7767,13 +7767,17 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 /* Horizontal mega menu for landscape tablets and larger
    ========================================================================== */
 
+.sliding-nav {
+  position: relative;
+}
+
 .sliding-nav_trigger {
   display: none;
 }
 
 .primary-nav {
   position: absolute;
-  top: 154px;
+  top: 116px;
   right: 0;
   left: 0;
   z-index: 100;
