--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -59,61 +59,20 @@
 */
 
 .u-w {
-    &100pct {
-        width: 100%;
-    }
-
-    &90pct {
-        width: 90%;
-    }
-
-    &80pct {
-        width: 80%;
-    }
-
-    &70pct {
-        width: 70%;
-    }
-
-    &60pct {
-        width: 60%;
-    }
-
-    &50pct {
-        width: 50%;
-    }
-
-    &40pct {
-        width: 40%;
-    }
-
-    &30pct {
-        width: 30%;
-    }
-
-    &20pct {
-        width: 20%;
-    }
-
-    &10pct {
-        width: 10%;
-    }
-
-    &75pct {
-        width: 75%;
-    }
-
-    &25pct {
-        width: 25%;
-    }
-
-    &66pct {
-        width: unit((2 / 3) * 100, %);
-    }
-
-    &33pct {
-        width: unit((1 / 3) * 100, %);
-    }
+    &100pct { width: 100%; }
+    &90pct  { width: 90%; }
+    &80pct  { width: 80%; }
+    &70pct  { width: 70%; }
+    &60pct  { width: 60%; }
+    &50pct  { width: 50%; }
+    &40pct  { width: 40%; }
+    &30pct  { width: 30%; }
+    &20pct  { width: 20%; }
+    &10pct  { width: 10%; }
+    &75pct  { width: 75%; }
+    &25pct  { width: 25%; }
+    &66pct  { width: unit((2 / 3) * 100, %); }
+    &33pct  { width: unit((1 / 3) * 100, %); }
 }
 
 
