Adds vertical align and updates time formatting.

--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -121,6 +121,7 @@ td {
     padding: unit(10px / @base-font-size-px, em)
              unit(10px / @base-font-size-px, em);
     background: @white;
+    vertical-align: top;
 
     // Needed to override styles from cf-core.
     tbody > tr:nth-child(odd) > & {
