--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6325,6 +6325,7 @@ th,
 td {
   padding: 0.625em 0.625em;
   background: #ffffff;
+  vertical-align: top;
 }
 tbody > tr:nth-child(odd) > th,
 tbody > tr:nth-child(odd) > td {
