--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -279,7 +279,7 @@
     margin-bottom: 0;
     border-bottom: 1px solid @gray-50;
     background: @gray-10;
-    color: @gray;
+    color: @darkgray;
 }
 
 
