--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7263,7 +7263,7 @@ thead th {
   margin-bottom: 0;
   border-bottom: 1px solid #babbbd;
   background: #f1f2f2;
-  color: #75787b;
+  color: #43484e;
 }
 
 .lt-ie9 thead th {
@@ -10530,7 +10530,7 @@ a.category-slug.active {
   margin-bottom: 0;
   border-bottom: 1px solid #babbbd;
   background: #f1f2f2;
-  color: #75787b;
+  color: #43484e;
 }
 
 .lt-ie9 .padded-header {
