Updates mail formatting.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -182,8 +182,8 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="list_link" href="mailto:Info@consumerfinance.gov">
-                                        Info@consumerfinance.gov
+                                    <a class="list_link" href="mailto:info@consumerfinance.gov">
+                                        info@consumerfinance.gov
                                     </a>
                                 </li>
                             </ul>
