Footer links should not link to the live site.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -198,29 +198,29 @@
 
                 <ul class="footer_long-list">
                     <li class="list_item">
-                        <a class="list_link" href="http://www.consumerfinance.gov/privacy-policy/">
+                        <span class="list_link list_link__disabled">
                             Privacy policy & legal notices
-                        </a>
+                        </span>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="http://www.consumerfinance.gov/accessibility/">
+                        <span class="list_link list_link__disabled">
                             Accessiblity
-                        </a>
+                        </span>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="http://www.consumerfinance.gov/plain-writing/">
+                        <span class="list_link list_link__disabled">
                             Plain writing
-                        </a>
+                        </span>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="http://www.consumerfinance.gov/no-fear-act/">
+                        <span class="list_link list_link__disabled">
                             No FEAR Act
-                        </a>
+                        </span>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="http://www.consumerfinance.gov/foia/">
+                        <span class="list_link list_link__disabled">
                             FOIA
-                        </a>
+                        </span>
                     </li>
                     <li class="list_item">
                         <a class="list_link" href="http://usa.gov/">
@@ -233,9 +233,9 @@
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="http://www.consumerfinance.gov/ombudsman/">
+                        <span class="list_link list_link__disabled">
                             Ombudsman
-                        </a>
+                        </span>
                     </li>
                 </ul>
 
