--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -14754,33 +14754,7 @@ a.focus .summary_header {
 }
 
 .footer_nav-list .list_link.list_link__disabled {
-  color: #babbbd;
-  border-color: #babbbd;
   border-bottom: 1px dotted;
-}
-
-.footer_nav-list .list_link.list_link__disabled:visited,
-.footer_nav-list .list_link.list_link__disabled.visited {
-  border-color: #babbbd;
-  color: #babbbd;
-}
-
-.footer_nav-list .list_link.list_link__disabled:hover,
-.footer_nav-list .list_link.list_link__disabled.hover {
-  border-color: #babbbd;
-  color: #babbbd;
-}
-
-.footer_nav-list .list_link.list_link__disabled:focus,
-.footer_nav-list .list_link.list_link__disabled.focus {
-  border-color: #babbbd;
-  color: #babbbd;
-}
-
-.footer_nav-list .list_link.list_link__disabled:active,
-.footer_nav-list .list_link.list_link__disabled.active {
-  border-color: #babbbd;
-  color: #babbbd;
 }
 
 .footer_nav-list .list_link.list_link__disabled {
@@ -15010,33 +14984,7 @@ a.focus .summary_header {
 }
 
 .footer_list .list_link.list_link__disabled {
-  color: #babbbd;
-  border-color: #babbbd;
   border-bottom: 1px dotted;
-}
-
-.footer_list .list_link.list_link__disabled:visited,
-.footer_list .list_link.list_link__disabled.visited {
-  border-color: #babbbd;
-  color: #babbbd;
-}
-
-.footer_list .list_link.list_link__disabled:hover,
-.footer_list .list_link.list_link__disabled.hover {
-  border-color: #babbbd;
-  color: #babbbd;
-}
-
-.footer_list .list_link.list_link__disabled:focus,
-.footer_list .list_link.list_link__disabled.focus {
-  border-color: #babbbd;
-  color: #babbbd;
-}
-
-.footer_list .list_link.list_link__disabled:active,
-.footer_list .list_link.list_link__disabled.active {
-  border-color: #babbbd;
-  color: #babbbd;
 }
 
 .footer_long-list {
@@ -15304,6 +15252,35 @@ a.focus .summary_header {
   padding-top: 1.875em;
   margin-top: 1.875em;
   border-top: 1px solid #babbbd;
+}
+
+.footer .list_link__disabled {
+  color: #babbbd;
+  border-color: #babbbd;
+}
+
+.footer .list_link__disabled:visited,
+.footer .list_link__disabled.visited {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer .list_link__disabled:hover,
+.footer .list_link__disabled.hover {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer .list_link__disabled:focus,
+.footer .list_link__disabled.focus {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer .list_link__disabled:active,
+.footer .list_link__disabled.active {
+  border-color: #babbbd;
+  color: #babbbd;
 }
 
 /* topdoc
